# pyro-annotator

./: .gitignore  Makefile  README.md  dl_tasks.py  docker-compose.yml  example_bboxs.default.json  main.py  make_dataset.py  push_labels.py  pyproject.toml  requirements.txt  split_fire.py  utils.py
annotation_api/: .env.template  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  SQLMODEL_DEPRECATION_FIX_PLAN.md  clean_gif_tests.py  complete_gif_cleanup.py  docker-compose-dev.yml  docker-compose.yml  final_gif_cleanup.py  final_test_cleanup.py  pyproject.toml  remove_gif_functions.py  requirements.txt
annotation_api/.claude/: settings.local.json
annotation_api/docs/: README.md  api-client-guide.md  api-reference.md  data-ingestion-guide.md  dbdiagram.txt  examples.md  sequence-annotation-guide.md
annotation_api/scripts/: __init__.py  dbdiagram.txt  setup.sh  test_e2e.py
annotation_api/scripts/data_transfer/: __init__.py
annotation_api/scripts/data_transfer/annotation_generation/: bbox_utils.py  generate_sequence_annotations.py  generate_sequence_gifs.py  sequence_analyzer.py
annotation_api/scripts/localstack/: setup-s3.sh
annotation_api/scripts/tests/: conftest.py  pytest.ini  test_annotation_processing.py
annotation_api/src/: Dockerfile
annotation_api/src/app/: db.py  main.py  models.py  requirements.txt
annotation_api/src/app/api/: dependencies.py
annotation_api/src/app/auth/: __init__.py  dependencies.py  endpoints.py  schemas.py
annotation_api/src/app/clients/: __init__.py  annotation_api.py
annotation_api/src/app/core/: config.py
annotation_api/src/app/crud/: __init__.py  base.py  crud_detection.py  crud_detection_annotation.py  crud_sequence.py  crud_sequence_annotation.py  crud_user.py
annotation_api/src/app/schemas/: __init__.py  annotation_validation.py  camera.py  combined.py  detection.py  detection_annotations.py  organization.py  sequence.py  sequence_annotations.py  source_api.py  user.py
annotation_api/src/app/services/: __init__.py  annotation_generation.py  gif_generator.py  storage.py
annotation_api/src/tests/: conftest.py
annotation_api/src/tests/clients/: test_annotation_api.py
annotation_api/src/tests/crud/: test_contributions.py  test_user_crud.py
annotation_api/src/tests/endpoints/: test_auth.py  test_cameras.py  test_detection_annotation_workflow.py  test_users.py  (+8 more)
sequence_labeler/: Makefile  README.md  app.py  prepare_data.py  pyproject.toml  speed.py  utils.py
sequence_labeler/tools/: prepare_data.py  run_app.py
(+265 files in other folders)
