[project]
name = "pyro-annotator"
version = "0.1.0"
description = "Pyronear annotation tool"
readme = "README.md"
authors = [
    { name = "Pyronear contributors", email = "contact@pyronear.org" }
]
license = "Apache-2.0"
requires-python = ">=3.11"


[tool.ruff]
line-length = 120
target-version = "py311"
preview = true
